--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+header{
+  text-align: center;
+}
+img {
+  margin: auto;
+  width: 50%;
+  
+  
+}
+
+nav{
+  text-align: center;
+  padding: 10px;
+  background-color: gray;
+  
 }
